# Bluecurve-Qt

./: .gitignore  Bluecurve.colors  CMakeLists.txt  README.md
src/: CMakeLists.txt  bits.cpp  bits.h  bluecurve.json  bluecurvestyle.cpp  bluecurvestyle.h  bluecurvestyleplugin.cpp  bluecurvestyleplugin.h
